<resources>
    <string name="app_name">Splitt</string>
    <string name="facebook_app_id">495992084097484</string>
    <string name="fb_login_protocol_scheme">fb495992084097484</string>
    <string name="title_activity_list_table">ListTableActivity</string>

    <string name="total_mesa">Total $: </string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="title_criar_mesa_dialog"> Create a new Table! </string>
    <string name="hint_criar_mesa_dialog">Give a name for it!</string>
    <string name="text_empty_mesa">Oops, nothing found :(</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_adicionar_pessoa">Add a person to your table</string>
    <string name="edit_dialog_nome_produto">Tell us the name of the product</string>
    <string name="edit_dialog_valor_produto">Tell us the value of it $:</string>
    <string name="edit_dialog_quantidade_produto">How many?</string>
    <string name="titulo_dialog_add_produto">Time to add a new product:</string>
    <string name="subtitulo_listaPessoas_dialog_produto">Choose the ones who will consume this</string>

    <string name="preco_produto">Price $:</string>

    <string name="text_detalhe_pessoa">here is what you have consumed so far: </string>
    <string name="text_titulo_tip_fragment">Have you finished? You can Add the tip now!</string>
    <string name="text_total_mesa_sem_tip">Your Table total without tip: $</string>
    <string name="text_percent_tip">What is the % you going to give?</string>

    <string name="hey">Hey, </string>
    <string name="choose_delete_update_dialog">What do you want to choose?</string>
    <string name="update_product">Add more </string>
    <string name="delete_product">Delete </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
